--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "polymer-select-box",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "Polymer tagging widget webcomponent",
     "license": "MIT",
     "main": "dist/polymer-select-box.html",
@@ -11,7 +11,13 @@
     "ignore": [
         "**/.*",
         "node_modules",
-        "bower_components"
+        "bower_components",
+        "*.komodoproject",
+        ".gitignore",
+        "bower.json",
+        "Gruntfile.js",
+        "package.json",
+        "README.md"
     ],
     "dependencies": {
         "polymer": "*"
