--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,9 @@
         "node_modules",
         "bower_components",
         "*.komodoproject",
+        "*.cmd",
         ".gitignore",
+        "index.html",
         "bower.json",
         "Gruntfile.js",
         "package.json",
