Ignore src too.

--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     ],
     "ignore": [
         "**/.*",
+        "src",
         "node_modules",
         "bower_components",
         "*.komodoproject",
