--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "grunt-cli": "*",
         "grunt-contrib-connect": "*",
         "grunt-gh-pages": "*",
-        "grunt-text-replace": "*"
+        "grunt-text-replace": "*",
+        "grunt-shell": "*"
     }
 }
